Pass CallbackCanceled error down to scatter-gather runner algorithm to process

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0
    • Repl 2017-06-19, Repl 2017-07-31, Repl 2017-08-21, Repl 2018-06-04, Repl 2018-06-18
    • 51
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The current scatter-gather runner processes CallbackCanceled error and return, instead we should let the algorithm to process all errors.

            Assignee:
            Samyukta Lanka
            Reporter:
            Siyuan Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: