SERVER-28389 Pass CallbackCanceled error down to scatter-gather runner algorithm to process